--- a/AppliedDSCapstone.ipynb
+++ b/AppliedDSCapstone.ipynb
@@ -5,7 +5,7 @@
    "id": "849f9bbd-ad4e-419c-91ce-854a8fb6df71",
    "metadata": {},
    "source": [
-    "# <center> Applied Data Science Capstone Project <center>"
+    "<center> Applied Data Science Capstone Project <center>"
    ]
   },
   {
